trigger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-listener-ingress
  namespace: demo
spec:
  ingressClassName: nginx
  rules:
    - host: underuse-subgroup-study.ngrok-free.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: el-github-listener
                port: {number: 8080}
